# BUSIT-week20

./: .env  .gitignore  .gitmodules  Keras.ipynb  README.md  all_action_sequences.csv  field_animation.py  final.csv  gent data.csv  model.ipynb  new.ipynb  pattern_sequence.py  posessions.ipynb  possession_data_filtered.csv  pyproject.toml  query_for_all_gent_games_sequenced.ipynb  requirements.txt  requirements_fa.txt  tensorflow.ipynb
.ipynb_checkpoints/: posessions-checkpoint.ipynb
csv/: possession_data_filtered.csv
notebooks/: query_for_all_gent_games_sequenced.ipynb
